--- a/src/app/pages/universe/universe.component.html
+++ b/src/app/pages/universe/universe.component.html
@@ -1,10 +1,13 @@
 <div class="head-container">
 	<div class="map-left">
-		<img class="logo-image" src="https://via.placeholder.com/100x100" alt="">
-		<h1 class="fact-title-map" *ngIf="selection=='arlenor'">{{ 'UNIVERSE.ARLENOR.TITLE' | translate | uppercase }}</h1>
-		<h1 class="fact-title-map" *ngIf="selection=='faradel'">{{ 'UNIVERSE.FARADEL.TITLE' | translate | uppercase }}</h1>
-		<h1 class="fact-title-map" *ngIf="selection=='jirakan'">{{ 'UNIVERSE.JIRAKAN.TITLE' | translate | uppercase }}</h1>
-		<h1 class="fact-title-map" *ngIf="selection=='zones'">{{ 'UNIVERSE.ZONES.TITLE' | translate | uppercase }}</h1>
+		<img class="zone-image" src="https://via.placeholder.com/100x100" alt="">
+		<h1 class="zone-title" *ngIf="selection=='arlenor'">{{ 'UNIVERSE.ARLENOR.TITLE' | translate | uppercase }}</h1>
+		<h1 class="zone-title" *ngIf="selection=='faradel'">{{ 'UNIVERSE.FARADEL.TITLE' | translate | uppercase }}</h1>
+		<h1 class="zone-title" *ngIf="selection=='jirakan'">{{ 'UNIVERSE.JIRAKAN.TITLE' | translate | uppercase }}</h1>
+		<h1 class="zone-title" *ngIf="selection=='imerys'">{{ 'UNIVERSE.IMERYS.TITLE' | translate | uppercase }}</h1>
+		<h1 class="zone-title" *ngIf="selection=='kazador'">{{ 'UNIVERSE.KAZADOR.TITLE' | translate | uppercase }}</h1>
+		<h1 class="zone-title" *ngIf="selection=='lumeck'">{{ 'UNIVERSE.LUMECK.TITLE' | translate | uppercase }}</h1>
+		<h1 class="zone-title" *ngIf="selection=='zones'">{{ 'UNIVERSE.ZONES.TITLE' | translate | uppercase }}</h1>
 		<div *ngFor="let fact of listFacts; let i=index">
 			<div *ngIf="i < 2" class="fact-container">
 				<h4>{{ 'UNIVERSE.POINTS' | translate | uppercase }}</h4>
@@ -19,10 +22,10 @@
 		<map name="map-areas" id="map-areas">
 			<area shape='poly' [coords]='coords_faradel' (click)="setSelection('faradel')"/>
 			<area shape='poly' [coords]='coords_jirakan' (click)="setSelection('jirakan')"/>
-			<area shape='poly' [coords]='coords_ne' (click)="setSelection('zones')"/>
-			<area shape='poly' [coords]='coords_se' (click)="setSelection('zones')"/>
-			<area shape='poly' [coords]='coords_no' (click)="setSelection('zones')"/>
-			<area shape='poly' [coords]='coords_so' (click)="setSelection('zones')"/>
+			<area shape='poly' [coords]='coords_imerys' (click)="setSelection('imerys')"/>
+			<area shape='poly' [coords]='coords_kazador' (click)="setSelection('kazador')"/>
+			<area shape='poly' [coords]='coords_lumeck' (click)="setSelection('lumeck')"/>
+			<area shape='poly' [coords]='coords_zones' (click)="setSelection('zones')"/>
 		</map>
 	</div>
 </div>
