Refactor(religion): Prepare the blocks

--- a/src/app/pages/universe/religion/religion.component.html
+++ b/src/app/pages/universe/religion/religion.component.html
@@ -1,4 +1,32 @@
-<div style="text-align:center">
-  <h1>LA RELIGION</h1>
+<div class="head-container">
+	<img src="https://via.placeholder.com/200x400" alt="">
+	<p class="head-text">Banane BananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBanane</p>
+	<img src="https://via.placeholder.com/200x400" alt="">
 </div>
-<div style="height: 450px;"></div>
+<div class="light-container">
+	<div class="light-angels">
+		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="https://via.placeholder.com/100x100" alt="">
+	</div>
+	<p class="light-text">Banane BananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBanane</p>
+	<div class="light-angels">
+		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="https://via.placeholder.com/100x100" alt="">
+	</div>
+</div>
