Feat(religion): Add symboles

--- a/src/app/pages/universe/religion/religion.component.html
+++ b/src/app/pages/universe/religion/religion.component.html
@@ -5,28 +5,28 @@
 </div>
 <div class="light-container">
 	<div class="light-angels">
-		<img src="https://via.placeholder.com/100x100" alt="">
-		<img src="https://via.placeholder.com/100x100" alt="">
-		<img src="https://via.placeholder.com/100x100" alt="">
-		<img src="https://via.placeholder.com/100x100" alt="">
-		<img src="https://via.placeholder.com/100x100" alt="">
-		<img src="https://via.placeholder.com/100x100" alt="">
-		<img src="https://via.placeholder.com/100x100" alt="">
-		<img src="https://via.placeholder.com/100x100" alt="">
-		<img src="https://via.placeholder.com/100x100" alt="">
-		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="assets/images/symboles/angel_01.png" alt="">
+		<img src="assets/images/symboles/angel_02.png" alt="">
+		<img src="assets/images/symboles/angel_03.png" alt="">
+		<img src="assets/images/symboles/angel_04.png" alt="">
+		<img src="assets/images/symboles/angel_05.png" alt="">
+		<img src="assets/images/symboles/angel_06.png" alt="">
+		<img src="assets/images/symboles/angel_07.png" alt="">
+		<img src="assets/images/symboles/angel_08.png" alt="">
+		<img src="assets/images/symboles/angel_09.png" alt="">
+		<img src="assets/images/symboles/angel_10.png" alt="">
 	</div>
 	<p class="light-text">Banane BananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBanane</p>
 	<div class="light-angels">
-		<img src="https://via.placeholder.com/100x100" alt="">
-		<img src="https://via.placeholder.com/100x100" alt="">
-		<img src="https://via.placeholder.com/100x100" alt="">
-		<img src="https://via.placeholder.com/100x100" alt="">
-		<img src="https://via.placeholder.com/100x100" alt="">
-		<img src="https://via.placeholder.com/100x100" alt="">
-		<img src="https://via.placeholder.com/100x100" alt="">
-		<img src="https://via.placeholder.com/100x100" alt="">
-		<img src="https://via.placeholder.com/100x100" alt="">
-		<img src="https://via.placeholder.com/100x100" alt="">
+		<img src="assets/images/symboles/demon_01.png" alt="">
+		<img src="assets/images/symboles/demon_02.png" alt="">
+		<img src="assets/images/symboles/demon_03.png" alt="">
+		<img src="assets/images/symboles/demon_04.png" alt="">
+		<img src="assets/images/symboles/demon_05.png" alt="">
+		<img src="assets/images/symboles/demon_06.png" alt="">
+		<img src="assets/images/symboles/demon_07.png" alt="">
+		<img src="assets/images/symboles/demon_08.png" alt="">
+		<img src="assets/images/symboles/demon_09.png" alt="">
+		<img src="assets/images/symboles/demon_10.png" alt="">
 	</div>
 </div>
