Refactor(religion): Add texts and css on it

--- a/src/app/pages/universe/religion/religion.component.html
+++ b/src/app/pages/universe/religion/religion.component.html
@@ -1,7 +1,20 @@
 <div class="head-container">
-	<img src="https://via.placeholder.com/200x400" alt="">
-	<p class="head-text">Banane BananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBanane</p>
-	<img src="https://via.placeholder.com/200x400" alt="">
+	<img src="assets/images/symboles/angel.png" alt="">
+	<div class="head-text">
+		<h1>LA RELIGION</h1>
+		<p>
+			Selon la légende connue par tous, la divinité de la Vie et de la Mort, Arlénor, a façonné le monde en y instaurant un équilibre.
+			Pour se faire, Arlénor créa 10 anges et 10 démons.
+			Les anges forment la Sainte Cabale et les démons, la Cabale Inversée.<br>
+			<br>
+			Quand les anges et démons ont aidé Arlénor lors de la Création, ils laissèrent des résidus de leurs pouvoirs : des cristaux.
+			Et on dit qu'à la fin de leur travail, ils retournèrent tous auprès d'Arlénor, au cœur de son monde.<br>
+			<br>
+			Aujourd'hui, des temples d'Arlénor existent un peu partout. Les peuples vénèrent dans chaque temple, la divinité Arlénor et un de ses anges ou démons.
+			La religion se base sur le maintien d'un équilibre entre le Bien et le Mal, et appuie sur le fait qu'il faut autant vénérer les anges que les démons.
+		</p>
+	</div>
+	<img src="assets/images/symboles/demon.png" alt="">
 </div>
 <div class="light-container">
 	<div class="light-angels">
@@ -16,7 +29,11 @@
 		<img src="assets/images/symboles/angel_09.png" alt="">
 		<img src="assets/images/symboles/angel_10.png" alt="">
 	</div>
-	<p class="light-text">Banane BananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBananeBanane BananeBananeBananeBananeBananeBananeBanane</p>
+	<div class="light-text">
+		<h4>SAINTE CABALE</h4>
+		<h2>Métatron, Ange de l'Unité</h2>
+		<p>"On va dire que chez les good guys, c'est lui le patron."<br>Lulu, Mama des Nemesis</p>
+	</div>
 	<div class="light-angels">
 		<img src="assets/images/symboles/demon_01.png" alt="">
 		<img src="assets/images/symboles/demon_02.png" alt="">
