Feat(global): Add fonts !!!

--- a/src/app/pages/universe/universe.component.scss
+++ b/src/app/pages/universe/universe.component.scss
@@ -30,9 +30,8 @@
 			}
 
 			.zone-title {
-				font-size: 38px;
-				color: $light-color;
-				margin-top: 25px;
+				font-size: 32px;
+				line-height: 32px;
 			}
 
 			.fact-container {
