--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,34 +1,63 @@
+<div *ngIf="bigfooter" class="footer-infos">
+	<div class="footer-left">
+		<div class="footer-container">
+			<img class="logo-image" src="https://via.placeholder.com/500x200" alt="">
+			<p>{{ 'FOOTER.RESUME' | translate }}</p>
+			<span routerLink="about"><i class="fas fa-chevron-right"></i>{{ 'FOOTER.SEEMORE' | translate | uppercase }}</span>
+		</div>
+	</div>
+	<div class="footer-right">
+		<ul>
+			<li>
+				<a href="https://www.facebook.com/spefire" target="_blank">
+						<span></span>
+						<span></span>
+						<span></span>
+						<span></span>
+						<i class="fab fa-facebook-f"></i>
+				</a>
+			</li>
+			<li>
+				<a href="https://twitter.com/spefire" target="_blank">
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<i class="fab fa-twitter"></i>
+				</a>
+			</li>
+			<li>
+				<a href="https://www.instagram.com/spefire_insta" target="_blank">
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<i class="fab fa-instagram"></i>
+				</a>
+			</li>
+		</ul>
+	</div>
+</div>
+
 <div class="footer-navigation">
-  <nav>
+  <nav [ngClass]="{ 'bigfooter-nav' : bigfooter }">
     <a routerLinkActive="active" routerLink="legacy" [innerHtml]="'FOOTER.LEGACY' | translate | uppercase"></a>
     <a routerLinkActive="active" routerLink="about" [innerHtml]="'FOOTER.ABOUT' | translate | uppercase"></a>
   </nav>
-  <div class="footer-section section-right">
+  <div *ngIf="!bigfooter" class="footer-section">
     <ul>
       <li>
         <a href="https://www.facebook.com/spefire" target="_blank">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
           <i class="fab fa-facebook-f"></i>
         </a>
       </li>
       <li>
         <a href="https://twitter.com/spefire" target="_blank">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
           <i class="fab fa-twitter"></i>
         </a>
       </li>
       <li>
         <a href="https://www.instagram.com/spefire_insta" target="_blank">
-          <span></span>
-          <span></span>
-          <span></span>
-          <span></span>
           <i class="fab fa-instagram"></i>
         </a>
       </li>
