--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -2,7 +2,153 @@
 
 :host {
     display: block;
-    background-color: $dark-color;
+		background-color: $dark-color;
+
+		.footer-infos {
+			display: flex;
+			height: 250px;
+			border-top: 1px solid $dark-secondary-color;
+
+			.footer-left {
+				position: relative;
+				width: 50%;
+				margin: auto 0;
+
+				.footer-container {
+					width: 70%;
+					padding: 0 15%;
+
+					.logo-image {
+						height: 50px;
+						width: 125px;
+						border: 1px solid $dark-color;
+					}
+
+					span {
+						color: $light-secondary-color;
+						cursor: pointer;
+
+						i {
+							transition: 0.5s;
+							width: 0px;
+							margin-right: 0;
+							transform: scaleX(0);
+						}
+
+						&:hover i {
+							width: 16px;
+							margin-right: 4px;
+							transform: scaleX(1);
+						}
+					}
+				}
+			}
+
+			.footer-right {
+				position: relative;
+				width: 50%;
+				margin: 25px 0;
+				border-left: 1px solid $dark-secondary-color;
+			}
+
+			ul {
+				display: flex;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+
+				margin: 0;
+				padding: 0;
+
+				li {
+					list-style: none;
+
+					a {
+						display: block;
+						position: relative;
+						height: 80px;
+						width: 80px;
+						margin: 0 20px;
+
+						line-height: 80px;
+						font-size: 40px;
+						text-align: center;
+						transition: 0.5s;
+
+						&:hover {
+							color: $light-secondary-color;
+						}
+
+						span {
+							position: absolute;
+							transition: transform 0.5s;
+							background-color: $dark-secondary-color;
+						}
+
+						span:nth-child(1), span:nth-child(3) {
+							height: 1px;
+							width: 100%;
+						}
+
+						span:nth-child(1) {
+							top: 0;
+							left: 0;
+							transform-origin: right;
+						}
+
+						&:hover span:nth-child(1) {
+							transform: scaleX(0);
+							transform-origin: left;
+							transition: transform 0.5s;
+						}
+
+						span:nth-child(3) {
+							bottom: 0;
+							right: 0;
+							transform-origin: left;
+						}
+
+						&:hover span:nth-child(3) {
+							transform: scaleX(0);
+							transform-origin: right;
+							transition: transform 0.5s;
+						}
+
+						span:nth-child(2), span:nth-child(4) {
+							height: 100%;
+							width: 1px;
+						}
+
+						span:nth-child(2) {
+							top: 0;
+							left: 0;
+							transform: scaleY(0);
+							transform-origin: bottom;
+						}
+
+						&:hover span:nth-child(2) {
+							transform: scaleY(1);
+							transform-origin: top;
+							transition: transform 0.5s;
+						}
+
+						span:nth-child(4) {
+							top: 0;
+							right: 0;
+							transform: scaleY(0);
+							transform-origin: top;
+						}
+
+						&:hover span:nth-child(4) {
+							transform: scaleY(1);
+							transform-origin: bottom;
+							transition: transform 0.5s;
+						}
+					}
+				}
+			}
+		}
 
     .footer-navigation {
         display: flex;
@@ -11,6 +157,12 @@
 
         height: 50px;
         border-top: 1px solid $dark-secondary-color;
+
+				.bigfooter-nav {
+					display: flex;
+					justify-content: space-between;
+					width: 100%;
+				}
 
         a {
           display: inline-block;
@@ -48,7 +200,6 @@
 
               a {
                 display: block;
-                position: relative;
                 height: 40px;
                 width: 40px;
                 margin: 0 20px;
@@ -57,74 +208,6 @@
                 line-height: 40px;
                 font-size: 20px;
                 text-align: center;
-                transition: 0.5s;
-
-                span {
-                  position: absolute;
-									transition: transform 0.5s;
-									//TODO : Re-use somewhere
-                  //background-color: $dark-secondary-color;
-                }
-
-                span:nth-child(1), span:nth-child(3) {
-                  height: 1px;
-                  width: 100%;
-                }
-
-                span:nth-child(1) {
-                  top: 0;
-                  left: 0;
-                  transform-origin: right;
-                }
-
-                &:hover span:nth-child(1) {
-                  transform: scaleX(0);
-                  transform-origin: left;
-                  transition: transform 0.5s;
-                }
-
-                span:nth-child(3) {
-                  bottom: 0;
-                  right: 0;
-                  transform-origin: left;
-                }
-
-                &:hover span:nth-child(3) {
-                  transform: scaleX(0);
-                  transform-origin: right;
-                  transition: transform 0.5s;
-                }
-
-                span:nth-child(2), span:nth-child(4) {
-                  height: 100%;
-                  width: 1px;
-                }
-
-                span:nth-child(2) {
-                  top: 0;
-                  left: 0;
-                  transform: scaleY(0);
-                  transform-origin: bottom;
-                }
-
-                &:hover span:nth-child(2) {
-                  transform: scaleY(1);
-                  transform-origin: top;
-                  transition: transform 0.5s;
-                }
-
-                span:nth-child(4) {
-                  top: 0;
-                  right: 0;
-                  transform: scaleY(0);
-                  transform-origin: top;
-                }
-
-                &:hover span:nth-child(4) {
-                  transform: scaleY(1);
-                  transform-origin: bottom;
-                  transition: transform 0.5s;
-                }
               }
             }
           }
