--- a/src/app/pages/universe/religion/religion.component.html
+++ b/src/app/pages/universe/religion/religion.component.html
@@ -1,23 +1,13 @@
 <div class="head-container">
 	<img src="assets/images/symboles/angel.png" alt="">
 	<div class="head-text">
-		<h1>LA RELIGION</h1>
-		<p>
-			Selon la légende connue par tous, la divinité de la Vie et de la Mort, Arlénor, a façonné le monde en y instaurant un équilibre.
-			Pour se faire, Arlénor créa 10 anges et 10 démons.
-			Les anges forment la Sainte Cabale et les démons, la Cabale Inversée.<br>
-			<br>
-			Quand les anges et démons ont aidé Arlénor lors de la Création, ils laissèrent des résidus de leurs pouvoirs : des cristaux.
-			Et on dit qu'à la fin de leur travail, ils retournèrent tous auprès d'Arlénor, au cœur de son monde.<br>
-			<br>
-			Aujourd'hui, des temples d'Arlénor existent un peu partout. Les peuples vénèrent dans chaque temple, la divinité Arlénor et un de ses anges ou démons.
-			La religion se base sur le maintien d'un équilibre entre le Bien et le Mal, et appuie sur le fait qu'il faut autant vénérer les anges que les démons.
-		</p>
+		<h1>{{ 'PAGE.RELIGION.TITLE' | translate | uppercase }}</h1>
+		<p>{{ 'UNIVERSE.RELIGION.SECTION01' | translate }}<br><br>{{ 'UNIVERSE.RELIGION.SECTION02' | translate }}<br><br>{{ 'UNIVERSE.RELIGION.SECTION03' | translate }}</p>
 	</div>
 	<img src="assets/images/symboles/demon.png" alt="">
 </div>
-<div class="light-container">
-	<div class="light-angels">
+<div class="entity-container">
+	<div class="entity-list">
 		<img *ngIf="select != 1" src="assets/images/symboles/angel_01.png" alt="" (click)="changeSelection(1)">
 		<img *ngIf="select == 1" src="assets/images/symboles/angel_01_selected.png" alt="">
 		<img *ngIf="select != 2" src="assets/images/symboles/angel_02.png" alt="" (click)="changeSelection(2)">
@@ -39,12 +29,12 @@
 		<img *ngIf="select != 10" src="assets/images/symboles/angel_10.png" alt="" (click)="changeSelection(10)">
 		<img *ngIf="select == 10" src="assets/images/symboles/angel_10_selected.png" alt="">
 	</div>
-	<div class="light-text">
-		<h4>SAINTE CABALE</h4>
-		<h2>Métatron, Ange de l'Unité</h2>
-		<p>"On va dire que chez les good guys, c'est lui le patron."<br>Lulu, Mama des Nemesis</p>
+	<div class="entity-text">
+		<h4>{{ entityKabal | uppercase }}</h4>
+		<h2>{{ entityTitle }}</h2>
+		<p>"{{ entityComment }}"<br>{{ entityCommentName }}</p>
 	</div>
-	<div class="light-angels">
+	<div class="entity-list">
 		<img *ngIf="select != 11" src="assets/images/symboles/demon_01.png" alt="" (click)="changeSelection(11)">
 		<img *ngIf="select == 11" src="assets/images/symboles/demon_01_selected.png" alt="">
 		<img *ngIf="select != 12" src="assets/images/symboles/demon_02.png" alt="" (click)="changeSelection(12)">
