Feat(universe): Add crystals page and prepare the other with adding head component

--- a/src/app/pages/universe/crystals/crystals.component.html
+++ b/src/app/pages/universe/crystals/crystals.component.html
@@ -1,4 +1,25 @@
-<div style="text-align:center">
-  <h1>LA MAGIE DES CRISTAUX</h1>
+<head-universe
+	title="{{ 'PAGE.CRYSTALS.TITLE' | translate | uppercase }}"
+	section01="{{ 'UNIVERSE.CRYSTALS.SECTION01' | translate }}"
+	section02="{{ 'UNIVERSE.CRYSTALS.SECTION02' | translate }}"
+	section03="{{ 'UNIVERSE.CRYSTALS.SECTION03' | translate }}"
+	imgLeft="assets/images/crystals/crystals_left.png"
+	imgRight="assets/images/crystals/crystals_right.png">
+</head-universe>
+<div class="crystal-container">
+	<img class="crystal-img" src="assets/images/crystals/crystal.png" alt="">
+	<div class="crystal-text">
+		<h4>{{ 'UNIVERSE.CRYSTALS.PROPERTIES.SUBTITLE' | translate | uppercase }}</h4>
+		<h2>{{ 'UNIVERSE.CRYSTALS.PROPERTIES.TITLE' | translate | uppercase }}</h2>
+		<p>
+				- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.01' | translate }}<br>
+				- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.02' | translate }}<br>
+				- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.03' | translate }}<br>
+				- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.04' | translate }}<br>
+				- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.05' | translate }}<br>
+				- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.06' | translate }}<br>
+				- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.07' | translate }}<br>
+				- {{ 'UNIVERSE.CRYSTALS.PROPERTIES.08' | translate }}
+		</p>
+	</div>
 </div>
-<div style="height: 450px;"></div>
