--- a/src/app/pages/universe/universe.component.html
+++ b/src/app/pages/universe/universe.component.html
@@ -1,4 +1,4 @@
-<div class="head-container">
+<div class="main-container">
 	<div class="map-left">
 		<img class="zone-image" src="https://via.placeholder.com/100x100" alt="">
 		<h4 class="zone-title" *ngIf="selection=='arlenor'">{{ 'UNIVERSE.WORLD.ARLENOR.TITLE' | translate | uppercase }}</h4>
