--- a/src/app/pages/universe/universe.component.scss
+++ b/src/app/pages/universe/universe.component.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/variables.scss";
 
 :host {
-	.head-container {
+	.main-container {
 		display: flex;
 
 		&::after {
@@ -14,7 +14,9 @@
 			right: 0;
 			z-index: -1;
 
-			box-shadow: 0 -150px 200px $dark-color inset;
+			background-position: center;
+			background-size: cover;
+			background-image: linear-gradient(0deg, rgba($dark-color, 0.8), rgba($dark-color, 0.8), rgba($dark-primary-color, 0.8), rgba($dark-primary-color, 1.0)), url("/assets/images/home_01.png");
 		}
 
 		.map-left {
