Refactor(global): Disable temporary the access to roleplay, character and celestia sections

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,7 +12,7 @@
     <h4>{{ 'PAGE.HOME.TITLE' | translate | uppercase }}</h4>
     <h1>{{ 'HOME.ROLEPLAY.TITLE' | translate | uppercase }}</h1>
     <p>{{ 'HOME.ROLEPLAY.RESUME' | translate }}</p>
-    <button routerLink="roleplay">{{ 'HOME.ROLEPLAY.SEEMORE' | translate | uppercase }}</button>
+    <button>{{ 'HOME.ROLEPLAY.SEEMORE' | translate | uppercase }}</button>
   </div>
 </div>
 <div [ngClass]="{'active': selection == 2 }" class="head-container container03">
@@ -20,7 +20,7 @@
     <h4>{{ 'PAGE.HOME.TITLE' | translate | uppercase }}</h4>
     <h1>{{ 'HOME.CHARACTERS.TITLE' | translate | uppercase }}</h1>
     <p>{{ 'HOME.CHARACTERS.RESUME' | translate }}</p>
-    <button routerLink="characters">{{ 'HOME.CHARACTERS.SEEMORE' | translate | uppercase }}</button>
+    <button>{{ 'HOME.CHARACTERS.SEEMORE' | translate | uppercase }}</button>
   </div>
 </div>
 <ul class="selection-container">
