--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,14 +5,14 @@
   </div>
   <nav>
     <a routerLinkActive="active" routerLink="universe" [innerHtml]="'HEADER.UNIVERSE.MAIN' | translate | uppercase"></a>
-    <a routerLinkActive="active" routerLink="roleplay" [innerHtml]="'HEADER.ROLEPLAY' | translate | uppercase"></a>
-    <a routerLinkActive="active" routerLink="characters" [innerHtml]="'HEADER.CHARACTERS' | translate | uppercase"></a>
+    <a class="disabled" [innerHtml]="'HEADER.ROLEPLAY' | translate | uppercase"></a>
+    <a class="disabled" [innerHtml]="'HEADER.CHARACTERS' | translate | uppercase"></a>
   </nav>
 </div>
 <div class="header-subsection" [ngClass]="{'active': route == 'universe' || route == 'roleplay' || route == 'characters'}">
   <nav class="header-subnav" *ngIf="route == 'universe'">
-		<a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe/evanell" [innerHtml]="'HEADER.UNIVERSE.SECTION05' | translate | uppercase"></a>
-		<a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe/celestia" [innerHtml]="'HEADER.UNIVERSE.SECTION04' | translate | uppercase"></a>
+		<a class="disabled" [innerHtml]="'HEADER.UNIVERSE.SECTION05' | translate | uppercase"></a>
+		<a class="disabled" [innerHtml]="'HEADER.UNIVERSE.SECTION04' | translate | uppercase"></a>
     <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe" class="header-subtitle" [innerHtml]="'HEADER.UNIVERSE.SECTION00' | translate | uppercase"></a>
     <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe/religion" [innerHtml]="'HEADER.UNIVERSE.SECTION01' | translate | uppercase"></a>
     <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe/crystals" [innerHtml]="'HEADER.UNIVERSE.SECTION02' | translate | uppercase"></a>
