--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -18,10 +18,6 @@
       padding: 0 15px;
 			transition: .5s;
 
-      &:hover {
-        color: $light-secondary-color;
-      }
-
       &:after {
         content: '';
         position: absolute;
@@ -32,16 +28,11 @@
         background: $dark-secondary-color;
 
         transform: scaleX(0);
-
         transition: transform .12s cubic-bezier(0.4, 0.0, 0.2, 1);
       }
 
-      &.active {
-        color: $light-secondary-color;
-
-        &:after {
-          transform: scaleX(1);
-        }
+      &.active &:after {
+				transform: scaleX(1);
       }
     }
 
@@ -81,14 +72,6 @@
       height: 40px;
       line-height: 40px;
       padding: 0 20px;
-
-      &:hover {
-        color: $light-secondary-color;
-      }
-
-      &.active {
-        color: $light-secondary-color;
-      }
     }
 
     .header-subnav {
