Feat(population): Prepare the page of population

--- a/src/app/pages/universe/population/population.component.html
+++ b/src/app/pages/universe/population/population.component.html
@@ -1,4 +1,20 @@
-<div style="text-align:center">
-  <h1>LES PEUPLES</h1>
+<head-universe
+	title="{{ 'PAGE.POPULATION.TITLE' | translate | uppercase }}"
+	section01="{{ 'UNIVERSE.POPULATION.SECTION01' | translate }}"
+	section02="{{ 'UNIVERSE.POPULATION.SECTION02' | translate }}"
+	section03="{{ 'UNIVERSE.POPULATION.SECTION03' | translate }}"
+	imgLeft="assets/images/population/adn.png"
+	imgRight="assets/images/population/adn.png">
+</head-universe>
+<div class="population-container">
+	<div>
+		<img class="population-img" src="assets/images/population/p_arlenien.png" alt="">
+		<img class="population-img main" src="assets/images/population/p_humain.png" alt="">
+		<img class="population-img" src="assets/images/population/p_elfe.png" alt="">
+	</div>
+	<div class="population-text">
+		<h2>{{ 'UNIVERSE.POPULATION.HUMAIN.TITLE' | translate | uppercase }}</h2>
+		<p>{{ 'UNIVERSE.POPULATION.HUMAIN.TEXT01' | translate }}<br><br>{{ 'UNIVERSE.POPULATION.HUMAIN.TEXT02' | translate }}<br><br></p>
+		<h4>{{ 'UNIVERSE.POPULATION.LOCATION' | translate | uppercase }} : {{ 'UNIVERSE.POPULATION.HUMAIN.LOCATION' | translate }}</h4>
+	</div>
 </div>
-<div style="height: 450px;"></div>
