--- a/src/app/pages/universe/population/population.component.scss
+++ b/src/app/pages/universe/population/population.component.scss
@@ -31,6 +31,7 @@
 			margin: 0;
 			border-radius: 50%;
 			border: 2px solid $dark-secondary-color;
+			cursor: pointer;
 
 			&.main {
 				height: 200px;
@@ -38,6 +39,7 @@
 
 				margin: 0 50px;
 				border: 6px double $dark-secondary-color;
+				cursor: default;
 			}
 		}
 
