--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,5 +6,5 @@ $primary-color: #247899;
 $light-primary-color: #7ADAFF;
 
 $dark-secondary-color: #CAC080;
-$secondary-color: #D0CAAA;
+$secondary-color: #ECDE93;
 $light-secondary-color: #FAF0A0;
