--- a/src/app/pages/fact/fact.component.scss
+++ b/src/app/pages/fact/fact.component.scss
@@ -2,22 +2,12 @@
 
 :host {
 
+		background-color: $dark-color;
+
     .head-container {
         position: relative;
-        height: 400px;
-        box-shadow: 0 -150px 200px $dark-color inset;
-
-        .title-background {
-            position: absolute;
-            height: 100%;
-            width: 100%;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: -1;
-            margin-left: auto;
-            margin-right: auto;
-        }
+        height: 600px;
+				box-shadow: 0 -250px 500px $dark-color inset;
 
         .title-container {
             position: absolute;
@@ -37,7 +27,6 @@
           height: 200px;
           width: 200px;
           transform: translateX(-50%);
-          border: 1px solid $dark-color;
       }
 		}
 }
