--- a/src/app/pages/fact/fact.component.scss
+++ b/src/app/pages/fact/fact.component.scss
@@ -7,16 +7,18 @@
     .head-container {
         position: relative;
         height: 600px;
-				box-shadow: 0 -250px 500px $dark-color inset;
+				box-shadow: 0 -250px 350px $dark-color inset;
 
         .title-container {
             position: absolute;
-            bottom: 10%;
+            bottom: 20px;
             left: 50%;
             width: 100%;
-            font-size: 70px;
-            text-align: center;
-            transform: translateX(-50%) translateY(100%);
+						text-align: center;
+						font-size: 100px;
+						line-height: 100px;
+						letter-spacing: 5px;
+            transform: translateX(-50%);
             color: $light-secondary-color;
         }
 
@@ -24,8 +26,8 @@
           position: absolute;
           bottom: 150px;
           left: 50%;
-          height: 200px;
-          width: 200px;
+          height: 150px;
+          width: 150px;
           transform: translateX(-50%);
       }
 		}
