Feat(crystals): Update the crystal img with data

--- a/src/app/pages/universe/crystals/crystals.component.html
+++ b/src/app/pages/universe/crystals/crystals.component.html
@@ -7,7 +7,12 @@
 	imgRight="assets/images/crystals/crystals_right.png">
 </head-universe>
 <div class="crystal-container">
-	<img class="crystal-img" src="assets/images/crystals/crystal.png" alt="">
+	<div class="crystal-imgs">
+		<img src="assets/images/crystals/crystal.png" alt="">
+		<img src="assets/images/crystals/crystal_data01.png" alt="">
+		<img src="assets/images/crystals/crystal_data02.png" alt="">
+		<img src="assets/images/crystals/crystal_data03.png" alt="">
+	</div>
 	<div class="crystal-text">
 		<h4>{{ 'UNIVERSE.CRYSTALS.PROPERTIES.SUBTITLE' | translate | uppercase }}</h4>
 		<h2>{{ 'UNIVERSE.CRYSTALS.PROPERTIES.TITLE' | translate | uppercase }}</h2>
