--- a/src/app/pages/universe/crystals/crystals.component.scss
+++ b/src/app/pages/universe/crystals/crystals.component.scss
@@ -24,13 +24,21 @@
 			background-image: linear-gradient(0deg, rgba($dark-color, 0.8), rgba($dark-color, 0.8), rgba($dark-primary-color, 0.8), rgba($dark-primary-color, 1.0)), url("/assets/images/home_01.png");
 		}
 
-		.crystal-img {
+		.crystal-imgs {
+			position: relative;
 			margin: 0 auto;
+			height: 450px;
+			width: 450px;
+
+			img {
+				position: absolute;
+				height: 450px;
+			}
 		}
 
 		.crystal-text {
 			text-align: left;
-			max-width: 50%;
+			width: 50%;
 
 			p {
 				font-size: 14px;
