--- a/src/app/pages/universe/population/population.component.html
+++ b/src/app/pages/universe/population/population.component.html
@@ -7,7 +7,9 @@
 	imgRight="assets/images/population/adn_right.png">
 </head-universe>
 <div class="population-container">
-	<div>
+	<div class="population-imgs">
+		<img (click)="previousSelection()" class="population-selectimg" src="assets/images/population/select_previous.png" alt="">
+
 		<img *ngIf="select == 2" (click)="previousSelection()" class="population-img" src="assets/images/population/p_humain.png" alt="">
 		<img *ngIf="select == 3" (click)="previousSelection()" class="population-img" src="assets/images/population/p_elfe.png" alt="">
 		<img *ngIf="select == 4" (click)="previousSelection()" class="population-img" src="assets/images/population/p_nain.png" alt="">
@@ -28,6 +30,8 @@
 		<img *ngIf="select == 3" (click)="nextSelection()" class="population-img" src="assets/images/population/p_mutant.png" alt="">
 		<img *ngIf="select == 4" (click)="nextSelection()" class="population-img" src="assets/images/population/p_pan.png" alt="">
 		<img *ngIf="select == 5" (click)="nextSelection()" class="population-img" src="assets/images/population/p_arlenien.png" alt="">
+
+		<img (click)="nextSelection()" class="population-selectimg" src="assets/images/population/select_next.png" alt="">
 	</div>
 	<div class="population-text">
 		<h2>{{ peopleTitle | uppercase }}</h2>
