--- a/src/app/pages/fact/fact.component.scss
+++ b/src/app/pages/fact/fact.component.scss
@@ -6,7 +6,7 @@
 
     .head-container {
         position: relative;
-        height: 600px;
+        min-height: 400px;
 				box-shadow: 0 -250px 350px $dark-color inset;
 
         .title-container {
@@ -15,8 +15,8 @@
             left: 50%;
             width: 100%;
 						text-align: center;
-						font-size: 100px;
-						line-height: 100px;
+						font-size: 80px;
+						line-height: 80px;
 						letter-spacing: 5px;
             transform: translateX(-50%);
             color: $light-secondary-color;
