--- a/src/app/pages/fact/fact.component.html
+++ b/src/app/pages/fact/fact.component.html
@@ -6,5 +6,6 @@
 	<h1 class="title-container">{{ fact.title | uppercase }}</h1>
 </div>
 <div separator></div>
-<p style="text-align: center">{{ fact.description }}</p>
-<div style="height: 450px;"></div>
+<p class="fact-text" innerHtml="{{ fact.texte01 }}"></p>
+<img class="fact-img" src="{{ fact.imageSrc }}" alt="">
+<p class="fact-text" innerHtml="{{ fact.texte02 }}"></p>
