Feat(facts): Update for placing fact on the left

--- a/src/app/pages/universe/universe.component.html
+++ b/src/app/pages/universe/universe.component.html
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 	<div class="map-right">
-		<img id="map-arlenor" class="map-background" src="assets/images/map_faradel.png" alt="" usemap="#map-areas">
+		<img id="map-arlenor" class="map-background" src="assets/images/map.png" alt="" usemap="#map-areas">
 		<map name="map-areas" id="map-areas">
 			<area shape='poly' [coords]='coords_faradel' (click)="setSelection('faradel')"/>
 			<area shape='poly' [coords]='coords_jirakan' (click)="setSelection('jirakan')"/>
